tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__BringMeMyVatofPo-AAAAAAAAAAAAAAAAAAADbA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 876,
  "prerequisites": [
    160,
    8148220388809046234
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Tired of using small cells to process chemicals? Build a Large Chemical Reactor and you can just pipe in and out fluids. Or use the glorious large fluid cells to deliver and remove fluids from the hatches.\n\nYou can decide if the reactor should void any extra products when the outputs are full or not by toggling the void mode in the GUI!\n\nThere are also recipes specific to only the LCR, sometimes even allowing you to skip a step, so keep your eyes open for that.\n\nAdditionally, as a multiblock, LCR also counts as a cleanroom for any cleanroom recipes.\n\nYou will also need:\n1 Maintenance Hatch\n1-2 Energy Hatches\n0+ Input Bus (if a recipe has an item input. For full automation, you should probably use 1 for each material)\n0-1 Output Bus (if a recipe has an item output)\n2+ Input Hatch (use 1 for every fluid)\n1+ Output Hatch (same as above)\n\nYou can use a screwdriver on an output hatch to cycle through its modes. Use shift-right-click to go directly to specific fluid mode, then lock the fluid with a cell for easier automation. This works on more than just the LCR.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bring Me My Vat of Polyethylene!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    160,
    8148220388809046234
  ],
  "rewards": [],
  "tasks": []
}
