tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__CoolGuysDontLook-AAAAAAAAAAAAAAAAAAAKxQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2757,
  "prerequisites": [
    1707,
    12880365575383562570
  ],
  "properties": {
    "auto_claim": false,
    "desc": "They automate them instead.\n\n[note]This multi is IV, but uses platline mats and ZPM circuits.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Cool Guys Don't Look at Explosions",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1707,
    12880365575383562570
  ],
  "rewards": [],
  "tasks": []
}
