tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__CrackingtheWorld-d5Fxz8ClQQCXy9GN_m9BrA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13881572898963931564,
  "prerequisites": [
    15325266858921172336
  ],
  "properties": {
    "auto_claim": false,
    "desc": "How much oil do you need? Or maybe it's Naquadah Fuel you're after, or Radox... either way, this massive structure can handle it, boasting 256 parallels.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lCracking the World",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15325266858921172336
  ],
  "rewards": [],
  "tasks": []
}
