tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__FitsTheMold-6glle46JSyuwR6O4x7mLYA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10270823076601629536,
  "prerequisites": [
    1416
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Making machines for every mold sounds tiring... fortunately, the Fluid Shaper multiblock can handle any number of molds by using §lSolidifier Hatches§r. This multiblock is also extendable, gaining more parallels if you add additional segments. Be sure to expand it if it's too slow!\n\n[note]The Fluid Shaper also speeds up as it is running, making it more efficient to do large batches.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fits The Mold",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1416
  ],
  "rewards": [],
  "tasks": []
}
